Cleanup action after testing
* Fix some path safety checks
* Add name to outputs for better clarity on upload

--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,10 @@ inputs:
     description: 'Relative path under $GITHUB_WORKSPACE to build from'
     default: '.'
 outputs:
-  package:
-    description: 'Generated tarball'
+  path:
+    description: 'Generated tarball relative to workspace'
+  name:
+    description: 'Filename for generated tarball'
 runs:
   using: 'docker'
   image: 'Dockerfile'
