--- a/.github/workflows/ttf-anonymous-pro-ext.yml
+++ b/.github/workflows/ttf-anonymous-pro-ext.yml
@@ -20,5 +20,5 @@ jobs:
       - name: upload
         uses: actions/upload-artifact@v1
         with:
-          name: ${{ steps.build.output.name }}
+          name: ${{ steps.build.outputs.name }}
           path: ${{ steps.build.outputs.path }}
