Add "latest" style upload
This is an experiment to keep an idea of a "latest" alias for packages

--- a/.github/workflows/ttf-anonymous-pro-ext.yml
+++ b/.github/workflows/ttf-anonymous-pro-ext.yml
@@ -22,3 +22,8 @@ jobs:
         with:
           name: ${{ steps.build.outputs.name }}
           path: ${{ steps.build.outputs.path }}
+      - name: upload-default
+        uses: actions/upload-artifact@v1
+        with:
+          name: 'ttf-anonymoux-pro-ext.pkg.tar.xz'
+          path: ${{ steps.build.outputs.path }}
