--- a/.github/workflows/ttf-anonymous-pro-ext.yml
+++ b/.github/workflows/ttf-anonymous-pro-ext.yml
@@ -14,6 +14,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v1
       - name: build
+        id: build
         uses: jdost/aur@action
         with:
           path: 'ttf-anonymous-pro-ext'
